# Rag-ChatBot

./: .cursorignore  .dockerignore  .env.example  .gitignore  CITATION_IMPROVEMENTS.md  Dockerfile  QUICKSTART_DOCKER.md  README.md  docker-compose-0-0-3.yml  docker-compose.yml  langchain-openai-0.4.4.tgz  next.config.ts  package-lock.json  package.json  prompts.yaml  pyproject.toml  requirements.txt  setup.py  test_embedding.py
Vector_DB - Documents/c068aab4-e417-4149-98d4-9bf9f14f91ce/: index_metadata.pickle
app/: app.py  config.py  main.py  models.py  test.py
app/routes/: documents.py  prompts.py
app/utils/: chatbot.py  prepare_vectordb.py
archived/: RESTRUCTURE_SUMMARY.md  app.py  requirements.txt  test.py  test_embedding.py
archived/app/: config.py
archived/app/routes/: chat.py  documents.py
archived/app/utils/: chatbot.py  prepare_vectordb.py
data/: prompts.yaml
frontend/: MIGRATION_SUMMARY.md  README.md  next.config.ts  package-lock.json  package.json
frontend/src/: instrumentation.ts
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: DocumentList.tsx  DocumentUpload.tsx  Login.tsx  PromptManager.tsx
scripts/: test-chromadb-connection.ts  test-metadata.js
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: ConfirmDialog.tsx  DocumentList.tsx  DocumentUpload.tsx  Login.tsx  PromptManager.tsx  UrlManager.tsx
src/contexts/: AuthContext.tsx  ThemeContext.tsx
src/lib/: api.ts  chatbot.ts  config.ts  openapi.ts  sessionManager.ts  types.ts  urlFetcher.ts  vectordb.ts
(+23 files in other folders)
