[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.13.2"
dependencies = [
    "chromadb==1.0.9",
    "fastapi>=0.115.9",
    "google-genai==1.7",
    "langchain==0.3.25",
    "langchain-chroma>=0.2.5",
    "langchain-community==0.3.24",
    "langchain-google-genai==2.1.0",
    "protobuf<=3.20.3",
    "pypdf>=6.1.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "setuptools>=80.9.0",
    "uvicorn>=0.37.0",
]
